--- a/_data/people.yml
+++ b/_data/people.yml
@@ -19,7 +19,7 @@ eliasf:
     facebook: https://www.facebook.com/narwhalcoding
     twitter: narwhalcoding
     github: narwhalcoding
-    bio: Hi! My name is Elias, and I am going into 7th grade. This summer I am hosting a virtual coding camp for kids ages 6 and up. I will be teaching kids how to use the [Scratch](https://scratch.mit.edu/) coding program. Scratch is a block coding program that allows you to create games and animations. It is great for kids who want to start learning how to code. I will also be offering a more advanced Scratch coding class for kids who already have some experience, and am happy to do one-on-one coaching as well. I have 3 years of experience with Scratch. I started a coding group called NarwhalCoding ([www.narwhalcoding.com](https://www.narwhalcoding.com)), where kids of different levels came together and helped each other learn to code. It became so popular that we started hosting meetings at the Lafayette Library, and it was often a full room.
+    bio: Hi! My name is Elias, and I am going into 7th grade. I started a coding club called NarwhalCoding ([www.narwhalcoding.com](https://narwhalcoding.com)), where kids of different levels come together and helped each other learn to code. It became so popular that we started hosting meetings at the Lafayette Library, and it was often a full room. Due to COVID-19, the meet-ups are indefinitely on hold, however, I am hosting [virtual coding classes](/classes/) over the summer.
     bio_short: 7th grader that loves to code. Also likes narwhals.
     description: 7th grader that loves to code. Also likes narwhals.
     image: eliasf.png
