--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ email: codingnarwhal@gmail.com
 facebook_link: https://www.facebook.com/narwhalcoding
 twitter_username: narwhalcoding
 github_username: narwhalcoding
+youtube_link: https://www.youtube.com/channel/UCXmV5D4mCBkx8xE-cgq-TSg
 rss: news/atom.xml
 
 # Build settings
