--- a/_data/about.yml
+++ b/_data/about.yml
@@ -2,16 +2,17 @@ docs_list_title: nav_about
 docs:
 
 - title: About
-  url: /about/
+  url: /about
 
 - title: Classes
-  url: /classes/
+  url: /classes
 
 - title: News
-  url: /news/
+  url: /news
 
 - title: Contact
-  url: /contact/
+  url: /contact
 
+  
 - title: Colophon
-  url: /colophon/
+  url: /colophon
