--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -2,13 +2,13 @@ docs_list_title: nav
 docs:
 
 - title: About
-  url: /about/
+  url: /about
 
 - title: Classes
-  url: /classes/
+  url: /classes
 
 - title: News
-  url: /news/
+  url: /news
 
 - title: Contact
-  url: /contact/
+  url: /contact
