--- a/_data/people.yml
+++ b/_data/people.yml
@@ -19,7 +19,7 @@ eliasf:
     facebook: https://www.facebook.com/narwhalcoding
     twitter: narwhalcoding
     github: narwhalcoding
-    bio: Hi! My name is Elias, and I am going into 7th grade. I started a coding club called NarwhalCoding ([www.narwhalcoding.com](https://narwhalcoding.com)), where kids of different levels come together and help each other learn to code. It became so popular that we started hosting meetings at the Lafayette Library, and it was often a full room. Due to COVID-19, the meet-ups are indefinitely on hold, however, I am hosting [virtual coding classes](/classes/) over the summer.
+    bio: Hi! My name is Elias, and I am going into 7th grade. I started a coding club called [NarwhalCoding](https://narwhalcoding.com), where kids of different levels come together and help each other learn to code. It became so popular that we started hosting meetings at the Lafayette Library, and it was often a full room. Due to COVID-19, the meet-ups are indefinitely on hold, however, I am hosting [virtual coding classes](/classes/) over the summer.
     bio_short: 7th grader that loves to code. Also likes narwhals.
     description: 7th grader that loves to code. Also likes narwhals.
     image: eliasf.png
