--- a/_data/about.yml
+++ b/_data/about.yml
@@ -7,12 +7,14 @@ docs:
 - title: Classes
   url: /classes
 
+- title: Videos
+  url: /videos
+
 - title: News
   url: /news
 
 - title: Contact
   url: /contact
-
   
 - title: Colophon
   url: /colophon
